--- a/tribute-page/styles.css
+++ b/tribute-page/styles.css
@@ -1,10 +1,110 @@
 * {
   margin: 0;
+  padding: 0;
   font-family: "Special Elite", cursive;
+  background-color: #fffdf8;
+  box-sizing: border-box;
 }
 
 #title {
   text-align: center;
-  padding-top: 4vh;
-  background-color: red;
+  justify-content: center;
+  margin-top: 4vh;
+}
+
+.social {
+  display: flex;
+  width: 100%;
+  height: auto;
+  margin-top: 15px;
+  text-align: center;
+}
+
+a {
+  text-decoration: none;
+  color: #000;
+  padding: 15px 15px;
+  text-align: center;
+}
+
+a:hover {
+  font-weight: bolder;
+}
+
+.left {
+  display: inline-flex;
+  width: 25%;
+  height: auto;
+  justify-content: center;
+}
+
+.right {
+  display: inline-flex;
+  width: 85%;
+  height: auto;
+  justify-content: center;
+}
+
+main {
+  display: flex;
+  width: 100%;
+  height: auto;
+}
+
+#content {
+  display: flex;
+  width: 100%;
+}
+
+.picture {
+  display: -ms-inline-grid;
+  width: 30%;
+  padding: 2.5rem;
+}
+
+#image  {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+.description {
+  display: block;
+  text-align: center;
+  margin-top: 25px;
+  max-width: 100%;
+}
+
+#tribute-info {
+  width: 100%;
+  margin: 40px 50px 20px 0 ;
+}
+
+p, h3 {
+  text-align: justify;
+  padding-bottom: 15px;
+}
+
+#tribute-link {
+  padding: 0;
+  text-decoration: underline;
+  color: #1a0dab;
+}
+
+#tribute-link:hover{
+  padding: 0;
+  text-decoration: underline;
+  color: #1a0dab;
+  font-weight: normal;
+}
+
+hr{
+  margin: 0 15px 0 15px;
+}
+
+h2{
+  display: block;
+  text-align: center;
+  margin-top: 15px;
+  justify-content: center;
 }
