--- a/survey-form/styles.css
+++ b/survey-form/styles.css
@@ -29,10 +29,33 @@
 .form-group {
   display: flex;
   flex-direction: column;
-  margin: 1rem;
+  padding: 1.5rem 1.5rem 0 1.5rem;
 }
-@media screen and (max-width: 768px) {
-  .container {
-    background-color: blue;
-  }
+
+.form-group button {
+  width: 100%;
+  padding: 0.5rem;
+  border-radius: 8px;
+  border: none;
+  background-color: #ffc107;
+  margin-bottom: 10px;
+  color: #000;
+  font-weight: bolder;
+  font-size: 14px;
+}
+
+.form-group p {
+  margin-bottom: 15px;
+}
+
+textarea {
+  padding-top: 10px;
+  font-weight: 500;
+  font-size: 15px;
+}
+
+select,
+input,
+textarea {
+  padding-left: 10px;
 }
