--- a/survey-form/styles.css
+++ b/survey-form/styles.css
@@ -75,6 +75,7 @@ body::after {
 #submit {
   background-color: rgb(192, 0, 43);
   color: #fff;
+  margin-bottom: 15px;
 }
 
 .form-group p {
@@ -88,8 +89,9 @@ textarea {
 }
 
 select,
+option,
 input,
 textarea {
   padding-left: 10px;
-  color: #000;
+  color: #000 !important;
 }
