Feat: Nav bar styles added with media queries

--- a/landing-page/styles.css
+++ b/landing-page/styles.css
@@ -10,3 +10,91 @@ body {
   font-family: "Red Hat Display", sans-serif;
   font-weight: 650;
 }
+
+.navbar {
+  display: flex;
+  position: relative;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #333;
+  color: #fff;
+}
+
+.navbar__logo {
+  display: flex;
+  margin: 0.5rem;
+}
+
+#navbar__name {
+  margin-left: 0.5rem;
+}
+
+.navbar__links {
+  height: 100%;
+}
+
+.navbar__links ul {
+  display: flex;
+  margin: 0;
+  padding: 0;
+}
+
+.navbar__links li {
+  list-style: none;
+}
+
+.navbar__links a {
+  display: block;
+  text-decoration: none;
+  color: #fff;
+  padding: 1.5rem;
+}
+
+.toggle-btn {
+  position: absolute;
+  top: 0.75rem;
+  right: 1rem;
+  display: none;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 30px;
+  height: 21px;
+}
+
+.toggle-btn .bar {
+  height: 3px;
+  width: 100%;
+  background-color: #fff;
+  border-radius: 10px;
+}
+
+@media (max-width: 800px) {
+  .navbar {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .toggle-btn {
+    display: flex;
+  }
+  .navbar__links {
+    display: none;
+    width: 100%;
+  }
+
+  .navbar__links ul {
+    width: 100%;
+    flex-direction: column;
+  }
+
+  .navbar__links ul li {
+    text-align: center;
+  }
+
+  .navbar__links ul li a {
+    padding: 0.5rem 1rem;
+  }
+
+  .navbar__links.active {
+    display: flex;
+  }
+}
