--- a/landing-page/styles.css
+++ b/landing-page/styles.css
@@ -11,7 +11,7 @@ body {
   font-weight: 650;
 }
 
-.navbar {
+#nav-bar {
   display: flex;
   position: relative;
   justify-content: space-between;
@@ -69,7 +69,7 @@ body {
 }
 
 @media (max-width: 800px) {
-  .navbar {
+  #nav-bar {
     flex-direction: column;
     align-items: flex-start;
   }
