--- a/landing-page/styles.css
+++ b/landing-page/styles.css
@@ -72,6 +72,8 @@ header {
 
 .container {
   width: 100%;
+  height: 100vh;
+  align-items: center;
   display: flex;
   padding: 2rem;
 }
@@ -181,18 +183,17 @@ form {
 }
 
 .header-services {
+  display: flex;
   align-items: center;
   justify-content: center;
-
-  display: flex;
-  padding: 1.5rem;
+  padding: 1.5rem 0 1.5rem 0;
 }
 
 .span-container {
   display: grid;
   grid-template-columns: auto auto auto;
   gap: 2rem;
-  padding: 1rem;
+  padding: 0 0 2rem 0;
   justify-content: space-around;
 }
 
@@ -201,20 +202,46 @@ form {
   font-weight: 500;
 }
 
+.video {
+  width: 100%;
+  height: auto;
+  padding: 1rem;
+  justify-content: center;
+  display: flex;
+}
+
 #footer {
   display: flex;
-  justify-content: space-around;
   align-items: center;
   background-color: #333;
   color: #fff;
   padding: 1rem;
+}
+.contact {
+  width: 100%;
+}
+
+.links-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 1rem 0;
+}
+
+#hinf {
+  display: flex;
+  width: 100%;
+  margin: 0 auto;
+  padding: 1rem 0;
+  justify-content: center;
 }
 .contact-links,
 .contact-links:visited {
   color: #fff;
   text-decoration: none;
 }
-
 @media screen and (max-width: 800px) {
   #nav-bar {
     flex-direction: column;
@@ -275,5 +302,30 @@ form {
 
   #submit {
     min-width: 70%;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .container {
+    height: 600px;
+  }
+  .description-container img {
+    display: none;
+  }
+  #cta:hover {
+    box-shadow: inset 380px 0 0 1px #f7941d;
+  }
+  .links-container {
+    display: grid;
+    justify-content: space-around;
+    align-items: center;
+    gap: 1rem;
+    grid-template-columns: auto auto auto;
+  }
+  .header-services {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 1.5rem 0 1rem 0;
   }
 }
