--- a/documentation-page/style.css
+++ b/documentation-page/style.css
@@ -146,8 +146,34 @@ code {
   * {
     font-size: 1.125rem;
   }
-  nav {
-    display: none;
+  nav header {
+    padding: 0.5rem;
+    margin-left: 2rem;
+  }
+  #navbar {
+    position: absolute;
+    top: 0;
+    padding: 0;
+    margin: 0;
+
+    width: 100%;
+    max-height: 15rem;
+    border: none;
+    z-index: 1;
+    border-bottom: 2px solid;
+  }
+
+  nav li {
+    border: none;
+  }
+
+  nav li a {
+    padding: 0.25rem 1rem;
+    margin-left: 1.5rem;
+  }
+  #main-doc {
+    display: relative;
+    margin-top: 270px;
   }
   .main-section {
     width: fit-content;
